--- a/index.html
+++ b/index.html
@@ -583,7 +583,9 @@
     
                             <div class="education-sub">
                                 <img class="hats" src="Icons/email.png">
-                                <p class="sub-paragraphs">tobechi.duru001@gmail.com</p>
+                                <a href="mailto:tobechi.duru001@gmail.com" style="text-decoration: none;">
+                                    <p class="sub-paragraphs">tobechi.duru001@gmail.com</p>
+                                </a>
                             </div>
                         </div>
                         <div>
