--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="certifications.css">
   <link rel="stylesheet" href="media.css">
   <link rel="stylesheet" href="hamburger.css">
+  <link rel="stylesheet" href="Fonts-6/css/all.css">
+
   <!-- Font Awesome for WhatsApp icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
@@ -561,14 +563,14 @@
                            <h1 class="sub-paragraphs">Education</h1>
                            <div style="border-bottom: 1px solid grey;" class="education">
                             <div  class="education-sub">
-                                <img class="hats" src="Icons/graduation-hat-2.png">
+                                <span class="icon-span"><i class="fa-solid fa-graduation-cap"></i></span>
                                 <p class="sub-paragraphs">Software Engineering</p>
                             </div>
                             <p style="font-size: 15px; margin-top: 5px;color: grey; margin-bottom: 20px;">ALX - Holberton School</p>
                            </div>
                            <div>
                             <div class="education-sub">
-                                <img style="margin-top: -10px;" class="hats" src="Icons/graduation-hat-2.png">
+                                <span class="icon-span"><i class="fa-solid fa-graduation-cap"></i></span>
                                 <p class="sub-paragraphs">B.Eng, Civil Engineering</p>
                             </div>
                             <p style="font-size: 15px; margin-top: 5px;color: grey;">Federal University of Technology, Owerri (FUTO)</p>
@@ -577,12 +579,12 @@
     
                         <div class="location">
                             <div style="margin-bottom: 15px;" class="education-sub">
-                                <img class="hats"  src="Icons/free-location-icon-2952-thumb.png">
+                                 <span class="icon-span1"><i class="fa-solid fa-location-dot"></i></span>
                                 <p class="sub-paragraphs">Lagos, Nigeria</p>
                             </div>
     
                             <div class="education-sub">
-                                <img class="hats" src="Icons/email.png">
+                                 <span class="icon-span2"><i class="fa-regular fa-envelope"></i></span>
                                 <a href="mailto:tobechi.duru001@gmail.com" style="text-decoration: none;">
                                     <p class="sub-paragraphs">tobechi.duru001@gmail.com</p>
                                 </a>
