--- a/certifications.html
+++ b/certifications.html
@@ -293,14 +293,14 @@
         </div>
       </nav> 
 
-      <section id="banner" style="margin-top: 126px; margin-bottom: 100px;" class="certifications-banner">
+      <section id="banner" class="certifications-banner">
         <div class="banner-overlay">
           <h1>My Certifications</h1>
-          <p>These certifications represent more than just completed courses, they are a testament to my unwavering commitment to continuous improvement, technical excellence, and staying at the forefront of innovation in the software engineering space. Each credential marks a deliberate step in expanding my knowledge, sharpening my problem-solving skills, and aligning with global industry standards. Whether it's mastering modern frameworks, enhancing security awareness, or exploring advanced engineering principles, these achievements reflect my proactive approach to personal and professional development in a competitive and ever-evolving digital world.</p>
+          <p style="max-width: 700px;">These certifications represent more than just completed courses, they are a testament to my unwavering commitment to continuous improvement, technical excellence, and staying at the forefront of innovation in the software engineering space. Each credential marks a deliberate step in expanding my knowledge, sharpening my problem-solving skills, and aligning with global industry standards. Whether it's mastering modern frameworks, enhancing security awareness, or exploring advanced engineering principles, these achievements reflect my proactive approach to personal and professional development in a competitive and ever-evolving digital world.</p>
         </div>
       </section>
 
-      <section id="card" style="margin-bottom: 100px;" class="cert-section">
+      <section id="card"  class="cert-section">
         <div class="card-grid">
           <div class="cert-card fade-in-up">
             <img src="Icons/17-short-specializations-certificate-tobechi-duru.png" alt="Certification 1">
