--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+
+    <div id="preloader">
+        <div class="spinner"></div>
+    </div>   
+    
     <nav> 
         <div class="navbar-container">
             <div class="right-side">
