--- a/projects.html
+++ b/projects.html
@@ -404,6 +404,22 @@
                     </a>  
                 </div>
 
+                <div class="card1 fade-in-up">
+                    <a href="" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/recipe-vault.png)"></div>
+                        <div class="card-content1">
+                            <div class="card-tags1">
+                                <span class="tag1">REACT </span>
+                                <span class="tag1">MONGODB</span>
+                                <span class="tag1">EXPRESS</span>
+                            </div>
+                            <h3 class="card-title1">Search recipes via a 3rd party api, and save personal ones</h3>
+                            <p class="card-date1">RECIPEVAULT (RECIPE FINDER & MANAGER)</p>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Duplicate set for seamless loop -->
 
                 <div class="card1 fade-in-up">
                     <a href="" style="text-decoration: none;">
@@ -416,22 +432,6 @@
                             </div>
                             <h3 class="card-title1">Search and view a collection of movies</h3>
                             <p class="card-date1">MOVIEMATE</p>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Duplicate set for seamless loop -->
-                <div class="card1 fade-in-up">
-                    <a href="" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/recipe-vault.png)"></div>
-                        <div class="card-content1">
-                            <div class="card-tags1">
-                                <span class="tag1">REACT </span>
-                                <span class="tag1">MONGODB</span>
-                                <span class="tag1">EXPRESS</span>
-                            </div>
-                            <h3 class="card-title1">Search recipes via a 3rd party api, and save personal ones</h3>
-                            <p class="card-date1">RECIPEVAULT (RECIPE FINDER & MANAGER)</p>
                         </div>
                     </a>
                 </div>
@@ -453,6 +453,21 @@
 
                 <div class="card1 fade-in-up">
                     <a href="" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/pollster.png)"></div>
+                        <div class="card-content1">
+                            <div class="card-tags1">
+                                <span class="tag1">REACT</span>
+                                <span class="tag1">EXPRESS API</span>
+                                <span class="tag1">MONGODB</span>
+                            </div>
+                            <h3 class="card-title1">Create and vote on polls in real-time with live updates</h3>
+                            <p class="card-date1">POLLSTER (LIVE POLLING APP)</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="card1 fade-in-up">
+                    <a href="" style="text-decoration: none;">
                         <div class="card-image1" style="background-image: url(Thumbnails/blogify.png)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
@@ -462,21 +477,6 @@
                             </div>
                             <h3 class="card-title1">Create, read, update, delete blog posts with markdown support</h3>
                             <p class="card-date1">BLOGIFY (SIMPLE BLOGGING PLATFORM)</p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="card1 fade-in-up">
-                    <a href="" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/58EC0FDB-8F9F-486E-A555-FFAD982FA41D.PNG)"></div>
-                        <div class="card-content1">
-                            <div class="card-tags1">
-                                <span class="tag1">REACT</span>
-                                <span class="tag1">EXPRESS API</span>
-                                <span class="tag1">MONGODB</span>
-                            </div>
-                            <h3 class="card-title1">Create and vote on polls in real-time with live updates</h3>
-                            <p class="card-date1">POLLSTER (LIVE POLLING APP)</p>
                         </div>
                     </a>
                 </div>
