--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                     <div style="padding-left: 7px;" class="projects-contents">
                         <p class="fade-in-up">PERSONAL BLOG</p>
                         <!-- From Uiverse.io by vinodjangid07 --> 
-                    <a href="about.html" style="text-decoration: none;"><button class="button fade-in-up">
+                    <a onclick="alert('Blog contents is being updated! Check back later.')" style="text-decoration: none;"><button class="button fade-in-up">
                         Read All
                     <div class="arrow">›</div>
                     </button></a>
