--- a/projects.html
+++ b/projects.html
@@ -606,7 +606,7 @@
                 </ul>
 
                 <div class="copyright">
-                    <p>Designed & Developed by Tobechi Duru &copy; 2025</p>
+                    <p>Designed & Developed by Tobechi Duru &copy; <span id="year"></span></p>
                 </div>
     
             </div>
@@ -630,6 +630,11 @@
       </div>
     </a>
   </div>
+
+  
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 
   <script src="script.js"></script>
 
