--- a/certifications.html
+++ b/certifications.html
@@ -448,7 +448,7 @@
                 </ul>
 
                 <div class="copyright">
-                    <p>Designed & Developed by Tobechi Duru &copy; 2025</p>
+                    <p>Designed & Developed by Tobechi Duru &copy; <span id="year"></span></p>
                 </div>
     
             </div>
@@ -472,6 +472,11 @@
         </div>
         </a>
     </div>
+
+   
+    <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
 
    <script src="script.js"></script>
 
