--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 <div class="carousel">
                     <!-- Original 7 cards -->
                     <div class="card">
-                        <a href="" style="text-decoration: none;">
+                        <a href="https://jumia-clone-sl3f.vercel.app/" style="text-decoration: none;">
                             <div class="card-image" style="background-image: url(Thumbnails/58EC0FDB-8F9F-486E-A555-FFAD982FA41D.PNG)"></div>
                             <div class="card-content">
                                 <div class="card-tags">
