--- a/projects.html
+++ b/projects.html
@@ -314,7 +314,7 @@
             <div class="carousel1">
                 <!-- Original 7 cards -->
                 <div class="card1 fade-in-up">
-                    <a href="" style="text-decoration: none;">
+                    <a href="https://jumia-clone-sl3f.vercel.app/" style="text-decoration: none;">
                         <div class="card-image1" style="background-image: url(Thumbnails/58EC0FDB-8F9F-486E-A555-FFAD982FA41D.PNG)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
