--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </a>
 
                     <!-- From Uiverse.io by vinodjangid07 --> 
-                    <input type="checkbox" id="checkbox">
+                    <input type="checkbox" id="checkbox" title="Open navigation menu" aria-label="Open navigation menu">
                     <label onclick="hamburger(); dropdown2();" for="checkbox" class="toggle">
                         <div class="bars" id="bar1"></div>
                         <div class="bars" id="bar2"></div>
