--- a/about.html
+++ b/about.html
@@ -479,8 +479,11 @@
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
-    
-   <script src="script.js"></script>
+
+
+ <script src="scripts/topProjects.js"></script>
+  <script src="scripts/projects.js"></script>
+  <script src="scripts/script.js"></script>
 
 </body>
 </html>
