--- a/contact.html
+++ b/contact.html
@@ -472,7 +472,10 @@
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
 
-    <script src="script.js"></script>
+   
+  <script src="scripts/topProjects.js"></script>
+  <script src="scripts/projects.js"></script>
+  <script src="scripts/script.js"></script>
 
 </body>
 
