Add certifications script and integrate into multiple HTML files

--- a/certifications.html
+++ b/certifications.html
@@ -301,43 +301,8 @@
       </section>
 
       <section id="card"  class="cert-section">
-        <div class="card-grid">
-          <div class="cert-card fade-in-up">
-            <img src="Icons/17-short-specializations-certificate-tobechi-duru.png" alt="Certification 1">
-            <div class="cert-title">Software Engineering (Frontend)</div>
-            <div class="cert-desc">Trained in frontend development with HTML, CSS, JS, and React.</div>
-            <div class="cert-link"><a href="https://drive.google.com/file/d/1is0MtuV1m_I7ZPKDCKqy2JsvdaEdxgwE/view">Verify</a></div>
-          </div>
-          <div class="cert-card fade-in-up">
-            <img src="Icons/52-professional-foundations-certificate-tobechi-duru.png" alt="Certification 2">
-            <div class="cert-title">Professional Foundation in Tech</div>
-            <div class="cert-desc">Acquired essential tech skills for teamwork and digital collaboration.</div>
-            <div class="cert-link"><a href="https://drive.google.com/file/d/1Dvlx5aFrrPuUhxsOEvg063iVMk0m_qXG/view">Verify</a></div>
-          </div>
-          <div class="cert-card fade-in-up">
-            <img src="Icons/66-alx-aice-ai-career-essentials-certificate-tobechi-duru.png" alt="Certification 3">
-            <div class="cert-title">AICE-AI Career Essentials</div>
-            <div class="cert-desc">Gained foundational knowledge in AI concepts and ethical AI practices.</div>
-            <div class="cert-link"><a href="https://drive.google.com/file/d/1Ywm4M1c9ZUf605IKUc8-rPfLnVrc24CG/view">Verify</a></div>
-          </div>
-          <div class="cert-card fade-in-up">
-            <img src="Icons/IMG_8722.PNG" alt="Certification 4">
-            <div class="cert-title">ALX-AI Starter Kit</div>
-            <div class="cert-desc">Completed hands-on introduction to AI tools and concepts via ALX.</div>
-            <div class="cert-link"><a href="https://drive.google.com/file/d/1C88K3k96550emg6MafrqI8f3kUZ7-T8M/view">Verify</a></div>
-          </div>
-          <div class="cert-card fade-in-up">
-            <img src="Icons/javascript.jpg" alt="Certification 5">
-            <div class="cert-title">JavaScript Essentials</div>
-            <div class="cert-desc">Learned core JavaScript syntax, logic, and DOM manipulation.</div>
-            <div class="cert-link"><a href="https://drive.google.com/file/d/1TkJMz0Yu1BBadTN5VIeu9yecmfZ-lAnT/view">Verify</a></div>
-          </div>
-          <div class="cert-card fade-in-up">
-            <img src="Icons/NSE.jpg" alt="Certification 6">
-            <div class="cert-title">Graduate Membership Nigerian Society of Engineers</div>
-            <div class="cert-desc">Officially recognized as a graduate member of the Nigerian Society of Engineers.</div>
-            <div class="cert-link"><a href="https://drive.google.com/file/d/1XBumEL8jri8-G1JYrgM0r-VNHbZBP0r5/view">Verify</a></div>
-          </div>
+        <div class="card-grid js-cardGrid">
+        
         </div>
       </section>
 
@@ -479,7 +444,7 @@
     </script>
 
 
-  
+  <script src="scripts/certifications.js"></script>
   <script src="scripts/topProjects.js"></script>
   <script src="scripts/projects.js"></script>
   <script src="scripts/script.js"></script>
