--- a/contact.html
+++ b/contact.html
@@ -473,6 +473,7 @@
     </script>
 
    
+  <script src="scripts/certifications.js"></script>
   <script src="scripts/topProjects.js"></script>
   <script src="scripts/projects.js"></script>
   <script src="scripts/script.js"></script>
