--- a/projects.html
+++ b/projects.html
@@ -455,6 +455,7 @@
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 
+ <script src="scripts/certifications.js"></script>
  <script src="scripts/topProjects.js"></script>
   <script src="scripts/projects.js"></script>
   <script src="scripts/script.js"></script>
