Refactor variable naming in Projects.js for consistency and clarity; comment out unused script in projects.html

--- a/projects.html
+++ b/projects.html
@@ -450,10 +450,10 @@
     </a>
   </div>
 
-  
+<!--   
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+  </script> -->
 
  <script src="scripts/certifications.js"></script>
  <script src="scripts/topProjects.js"></script>
