--- a/certifications.html
+++ b/certifications.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>certifications</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="certifications.css">
-  <link rel="stylesheet" href="banner.css">
-  <link rel="stylesheet" href="media.css">
-  <link rel="stylesheet" href="hamburger.css">
+  <link rel="stylesheet" href="Styles/main.css">
+  <link rel="stylesheet" href="Styles/certifications.css">
+  <link rel="stylesheet" href="Styles/banner.css">
+  <link rel="stylesheet" href="Styles/media.css">
+  <link rel="stylesheet" href="Styles/hamburger.css">
 </head>
 
 <body>
