--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="certifications.css">
-  <link rel="stylesheet" href="media.css">
-  <link rel="stylesheet" href="hamburger.css">
+  <link rel="stylesheet" href="Styles/main.css">
+  <link rel="stylesheet" href="Styles/certifications.css">
+  <link rel="stylesheet" href="Styles/media.css">
+  <link rel="stylesheet" href="Styles/hamburger.css">
   <link rel="stylesheet" href="Fonts-6/css/all.css">
 
   <!-- Font Awesome for WhatsApp icon -->
