Add year.js file

--- a/about.html
+++ b/about.html
@@ -476,13 +476,11 @@
     </div>
 
    
-    <script>
-        document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
 
 
- <script src="scripts/certifications.js"></script>
- <script src="scripts/topProjects.js"></script>
+  <script src="scripts/updateYear.js"></script>
+  <script src="scripts/certifications.js"></script>
+  <script src="scripts/topProjects.js"></script>
   <script src="scripts/projects.js"></script>
   <script src="scripts/script.js"></script>
 
