--- a/index.html
+++ b/index.html
@@ -588,10 +588,9 @@
         </a>
     </div>
 
-    <script>
-        document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
 
+    
+  <script src="scripts/updateYear.js"></script>
   <script src="scripts/certifications.js"></script>
   <script src="scripts/topProjects.js"></script>
   <script src="scripts/projects.js"></script>
