--- a/projects.html
+++ b/projects.html
@@ -451,14 +451,12 @@
   </div>
 
   
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
 
+ <script src="scripts/updateYear.js"></script>
  <script src="scripts/certifications.js"></script>
  <script src="scripts/topProjects.js"></script>
-  <script src="scripts/projects.js"></script>
-  <script src="scripts/script.js"></script>
+ <script src="scripts/projects.js"></script>
+ <script src="scripts/script.js"></script>
 
 </body>
 </html>
