Added blog.js file and used javascript to structure blog section.

--- a/certifications.html
+++ b/certifications.html
@@ -442,6 +442,7 @@
    
 
   <script src="scripts/updateYear.js"></script>
+  <script src="Scripts/blogs.js"></script>
   <script src="scripts/certifications.js"></script>
   <script src="scripts/topProjects.js"></script>
   <script src="scripts/projects.js"></script>
