--- a/index.html
+++ b/index.html
@@ -356,32 +356,8 @@
     
                 <div class="blog-section fade-in-up">
                     <div class="blog-slider-container">
-                        <div class="blog-slides-wrapper" id="blogSlides">
-                          <div class="blog-slide-card" style="background-image: url('Thumbnails/mern.jpg');">
-                            <h2 style="color: gray">Building from the Ground Up — My Dev Philosophy</h2>
-                            <p>Why I Chose the MERN Stack, and What It Taught Me</p>
-                            <button onclick="alert('Blog contents is being updated! Check back later.')">Read Article</button>
-                          </div>
-                          <div class="blog-slide-card" style="background-image: url('Thumbnails/prompt2.jpg');">
-                            <h2 style="color: gray">Talking to Machines: My Prompt Engineering Deep Dive</h2>
-                            <p>How I Learned to Speak AI</p>
-                            <button onclick="alert('Blog contents is being updated! Check back later.')">Read Article</button>
-                          </div>
-                          <div class="blog-slide-card" style="background-image: url('Thumbnails/web333.jpg');">
-                            <h2 style="color: gray">My Web3 Wake-Up Call</h2>
-                            <p>Stepping into Web3: My First Glimpse into the Decentralized Web</p>
-                            <button onclick="alert('Blog contents is being updated! Check back later.')">Read Article</button>
-                          </div>
-                          <div class="blog-slide-card" style="background-image: url('Thumbnails/deploy.png');">
-                            <h2 style="color: gray">The Day My Code Went Live</h2>
-                            <p>Deploying My First App: The Mistakes, the Fixes, the Lessons</p>
-                            <button onclick="alert('Blog contents is being updated! Check back later.')">Read Article</button>
-                          </div>
-                          <div class="blog-slide-card" style="background-image: url('Thumbnails/github.jpg');">
-                            <h2 style="color: gray">GitHub Saved My Career (Literally)</h2>
-                            <p> How Version Control Helped Me Land Clients, Collaborate Better, and Never Lose a File Again</p>
-                            <button onclick="alert('Blog contents is being updated! Check back later.')">Read Article</button>
-                          </div>
+                        <div class="blog-slides-wrapper js-blogsWrapper" id="blogSlides">
+
                         </div>
                         <div class="blog-nav-controls">
                           <span class="blog-arrow-btn" id="blogPrev"><img class="arrow-img" src="Icons/left-Photoroom.png"></span>
@@ -591,6 +567,7 @@
 
     
   <script src="scripts/updateYear.js"></script>
+  <script src="Scripts/blogs.js"></script>
   <script src="scripts/certifications.js"></script>
   <script src="scripts/topProjects.js"></script>
   <script src="scripts/projects.js"></script>
