--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@
   <script src="scripts/certifications.js"></script>
   <script src="scripts/topProjects.js"></script>
   <script src="scripts/projects.js"></script>
+  <script src="Scripts/whatsapp.js"></script>
   <script src="scripts/script.js"></script>
 
 </body>
