--- a/projects.html
+++ b/projects.html
@@ -452,12 +452,13 @@
 
   
 
- <script src="scripts/updateYear.js"></script>
- <script src="Scripts/blogs.js"></script>
- <script src="scripts/certifications.js"></script>
- <script src="scripts/topProjects.js"></script>
- <script src="scripts/projects.js"></script>
- <script src="scripts/script.js"></script>
+  <script src="scripts/updateYear.js"></script>
+  <script src="Scripts/blogs.js"></script>
+  <script src="scripts/certifications.js"></script>
+  <script src="scripts/topProjects.js"></script>
+  <script src="scripts/projects.js"></script>
+  <script src="Scripts/whatsapp.js"></script>
+  <script src="scripts/script.js"></script>
 
 </body>
 </html>
