--- a/about.html
+++ b/about.html
@@ -478,13 +478,13 @@
    
 
 
-  <script src="scripts/updateYear.js"></script>
+  <script src="Scripts/projects.js"></script>
   <script src="Scripts/blogs.js"></script>
-  <script src="scripts/certifications.js"></script>
-  <script src="scripts/topProjects.js"></script>
-  <script src="scripts/projects.js"></script>
+  <script src="Scripts/certifications.js"></script>
+  <script src="Scripts/script.js"></script>
+  <script src="Scripts/topProjects.js"></script>
   <script src="Scripts/whatsapp.js"></script>
-  <script src="scripts/script.js"></script>
+  <script src="Scripts/updateYear.js"></script>
 
 </body>
 
