Completed blog section by linking all blogs to personal blog space on Hashnode

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <div style="padding-left: 7px;" class="projects-contents">
                         <p class="fade-in-up">PERSONAL BLOG</p>
                         <!-- From Uiverse.io by vinodjangid07 --> 
-                    <a onclick="alert('Blog contents is being updated! Check back later.')" style="text-decoration: none;"><button class="button fade-in-up">
+                    <a class="js-readall" style="text-decoration: none;"><button class="button fade-in-up">
                         Read All
                     <div class="arrow">›</div>
                     </button></a>
@@ -357,7 +357,7 @@
                 <div class="blog-section fade-in-up">
                     <div class="blog-slider-container">
                         <div class="blog-slides-wrapper js-blogsWrapper" id="blogSlides">
-
+                            <!-- slider found in Javascript -->
                         </div>
                         <div class="blog-nav-controls">
                           <span class="blog-arrow-btn" id="blogPrev"><img class="arrow-img" src="Icons/left-Photoroom.png"></span>
