Update blogs view on mobile devices

--- a/about.html
+++ b/about.html
@@ -284,8 +284,8 @@
                 </a>
             </div>
             <div class="custom-list-sub">
-                <a onclick="alert('Blog contents is being updated! Check back later.')"> 
-                    <li href="#blog" class="custom-menu-item"><p style="color: var(--drop); font-weight: 700;" class="custom-menu-link">Blogs</p></li>
+                <a class="js-dropdownBlogs"> 
+                    <li class="custom-menu-item"><p style="color: var(--drop); font-weight: 700;" class="custom-menu-link">Blogs</p></li>
                 </a>
             </div>
         </div>
