updated blogs URL for mobile devices

--- a/certifications.html
+++ b/certifications.html
@@ -286,7 +286,7 @@
                 </div>
                 <div class="custom-list-sub">
                     <a class="js-dropdownBlogs"> 
-                        <li class="custom-menu-item"><p style="color: var(--drop); font-weight: 700;" class="custom-menu-link">Blogs</p></li>
+                     <p style="color: var(--drop); font-weight: 700;" class="custom-menu-link">Blogs</p>
                     </a>
                 </div>
             </div>
