--- a/about.html
+++ b/about.html
@@ -35,21 +35,21 @@
                       <button class="socials-btn"><p>Socials <img class="dropdown-icon" src="Icons/download-Photoroom.png"></p>
                       </button>
                       <div class="socials-container">
-                              <div class="socials">
-                                  <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru">
+                              <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru">
+                                    <div class="socials">
                                       <img src="Icons/Linkedin-Photoroom.png"> <P>Linkedin</P>
-                                  </a>
-                              </div>
-                              <div class="socials">
-                                  <a style="text-decoration: none;" href="https://github.com/Tobe01">
+                                    </div>
+                                </a>
+                                <a style="text-decoration: none;" href="https://github.com/Tobe01">
+                                    <div class="socials">
                                       <img src="Icons/Github-Photoroom.png"> <P>Github</P>
-                                  </a>
-                              </div>
-                              <div class="socials">
-                                  <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
+                                    </div>
+                                </a>
+                                <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
+                                    <div class="socials">
                                       <img src="Icons/twitter-Photoroom.png"> <P>Twitter</P>
-                                  </a>
-                              </div>
+                                    </div>
+                                </a>
                       </div>
                   </div>
                   <a href="certifications.html"><button><p>Certifications</p></button></a>
@@ -284,7 +284,7 @@
                 </a>
             </div>
             <div class="custom-list-sub">
-                <a class="js-dropdownBlogs"> 
+                <a href = "https://tobechiduru.hashnode.dev/"> 
                     <p style="color: var(--drop); font-weight: 700;" class="custom-menu-link">Blogs</p>
                 </a>
             </div>
