--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
                         <button class="socials-btn"><p>Socials <img class="dropdown-icon" src="Icons/download-Photoroom.png"></p>
                         </button>
                         <div class="socials-container">
-                                <div class="socials">
-                                    <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru">
-                                        <img src="Icons/Linkedin-Photoroom.png"> <P>Linkedin</P>
-                                    </a>
-                                </div>
-                                <div class="socials">
-                                    <a style="text-decoration: none;" href="https://github.com/Tobe01">
-                                        <img src="Icons/Github-Photoroom.png"> <P>Github</P>
-                                    </a>
-                                </div>
-                                <div class="socials">
-                                    <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
-                                        <img src="Icons/twitter-Photoroom.png"> <P>Twitter</P>
-                                    </a>
-                                </div>
+                                <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru">
+                                    <div class="socials">
+                                    <img src="Icons/Linkedin-Photoroom.png"> <P>Linkedin</P>
+                                    </div>
+                                </a>
+                                <a style="text-decoration: none;" href="https://github.com/Tobe01">
+                                    <div class="socials">
+                                    <img src="Icons/Github-Photoroom.png"> <P>Github</P>
+                                        </div>
+                                </a>
+                                <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
+                                    <div class="socials">
+                                    <img src="Icons/twitter-Photoroom.png"> <P>Twitter</P>
+                                        </div>
+                                </a>
                         </div>
                     </div>
                     <a href="certifications.html"><button><p>Certifications</p></button></a>
@@ -292,7 +292,7 @@
                     </a>
                 </div>
                 <div class="custom-list-sub">
-                    <a class="js-dropdownBlogs"> 
+                    <a href = "https://tobechiduru.hashnode.dev/"> 
                         <p style="color: var(--drop); font-weight: 700;" class="custom-menu-link">Blogs</p>
                     </a>
                 </div>
