Updated projects card structure

--- a/projects.html
+++ b/projects.html
@@ -313,7 +313,95 @@
 
             <div class="carousel1 js-carousel">
                 <!-- Original 7 cards -->
+                 <div class="card1 fade-in-up">
+                    <a href="https://jumia-clone-sl3f.vercel.app/" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/58EC0FDB-8F9F-486E-A555-FFAD982FA41D.PNG)"></div>
+                        <div class="card-content1">
+                            <div class="card-tags1">
+                                <span class="tag1">REACT UI</span>
+                                <span class="tag1">STRIPE PAYMENTS</span>
+                                <span class="tag1">NODE/EXPRESS</span>
+                            </div>
+                            <h3 class="card-title1">A modern online store with product pages, cart, and checkout</h3>
+                            <p class="card-date1">SHOPEASE (E-COMMERCE STORE)</p>
+                        </div>
+                    </a>
+                 </div>
+
+                  <div class="card1 fade-in-up">
+                    <a href="#" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/Tasknet.png)"></div>
+                        <div class="card-content1">
+                            <div class="card-tags1">
+                                <span class="tag1">REACT</span>
+                                <span class="tag1">NODE/EXPRESS API</span>
+                                <span class="tag1">MONGODB</span>
+                            </div>
+                            <h3 class="card-title1">Create, edit, and organize tasks with drag-and-drop UI</h3>
+                            <p class="card-date1">TASKNEST (TASK MANAGER)</p>
+                        </div>
+                    </a>
+                 </div>
+
+                  <div class="card1 fade-in-up">
+                    <a href="#" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/skillHive.png)"></div>
+                        <div class="card-content1">
+                            <div class="card-tags1">
+                                <span class="tag1">REACT UI</span>
+                                <span class="tag1">NODE/EXPRESS</span>
+                                <span class="tag1">MONGODB</span>
+                            </div>
+                            <h3 class="card-title1">List and browse beginner-friendly online courses</h3>
+                            <p class="card-date1">SKILLHIVE (COURSE LISTING APP)</p>
+                        </div>
+                    </a>
+                 </div>
+
                 <!-- Duplicate set for seamless loop -->
+                  <div class="card1 fade-in-up">
+                    <a href="#" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/eventitfy.png)"></div>
+                        <div class="card-content1">
+                            <div class="card-tags1">
+                                <span class="tag1">NODE/EXPRESS</span>
+                                <span class="tag1">REACT</span>
+                                <span class="tag1">MONGODB</span>
+                            </div>
+                            <h3 class="card-title1">Create, rsvp to, or view events in your area</h3>
+                            <p class="card-date1">EVENTIFY (EVENT MANAGEMENT APP)</p>
+                        </div>
+                    </a>
+                 </div>
+
+                  <div class="card1 fade-in-up">
+                    <a href="#" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/Notebox.png)"></div>
+                        <div class="card-content1">
+                            <div class="card-tags1">
+                                <span class="tag1">JWT-AUTH</span>
+                                <span class="tag1">MONGODB</span>
+                            </div>
+                            <h3 class="card-title1">Users can write, edit, and save personal notes in the cloud</h3>
+                            <p class="card-date1">NOTEBOX (NOTE-TAKING APP)</p>
+                        </div>
+                    </a>
+                 </div>
+
+                  <div class="card1 fade-in-up">
+                    <a href="#" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/Devlink.png)"></div>
+                        <div class="card-content1">
+                            <div class="card-tags1">
+                                <span class="tag1">REACT FORMS</span>
+                                <span class="tag1">EXPRESS API</span>
+                                <span class="tag1">MONGODB</span>
+                            </div>
+                            <h3 class="card-title1">A platform to create and view mini-developer profiles with social links</h3>
+                            <p class="card-date1">DEVLINK (DEVELOPER PROFILE DIRECTORY)</p>
+                        </div>
+                    </a>
+                 </div>
             </div>
         </div>
     </main>
