Updated Technical Article

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             <div class="blog">
                 <div class="projects-container fade-in-up">
                     <div style="padding-left: 7px;" class="projects-contents">
-                        <p class="fade-in-up">PERSONAL BLOG</p>
+                        <p class="fade-in-up">TECHNICAL ARTICLES</p>
                         <!-- From Uiverse.io by vinodjangid07 --> 
                     <a class="js-readall" style="text-decoration: none;"><button class="button fade-in-up">
                         Read All
