--- a/projects.html
+++ b/projects.html
@@ -315,22 +315,22 @@
             <div class="carousel1 js-carousel">
                 <!-- Original 7 cards -->
                  <div class="card1 fade-in-up">
-                    <a href="https://jumia-clone-sl3f.vercel.app/" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/58EC0FDB-8F9F-486E-A555-FFAD982FA41D.PNG)"></div>
+                    <a href="https://tobe-expense-tracker.vercel.app/" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/expense.png)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
-                                <span class="tag1">REACT UI</span>
-                                <span class="tag1">STRIPE PAYMENTS</span>
+                                <span class="tag1">REACT, TYPESCRIPT</span>
+                                <span class="tag1">TAILWINDCSS</span>
                                 <span class="tag1">NODE/EXPRESS</span>
                             </div>
-                            <h3 class="card-title1">A modern online store with product pages, cart, and checkout</h3>
-                            <p class="card-date1">SHOPEASE (E-COMMERCE STORE)</p>
+                            <h3 class="card-title1">A responsive web app for tracking expenses with charts and a clean dashboard UI</h3>
+                            <p class="card-date1">Expenses Tracker</p>
                         </div>
                     </a>
                  </div>
 
                   <div class="card1 fade-in-up">
-                    <a href="#" style="text-decoration: none;">
+                    <a href="https://jumia-clone-sl3f.vercel.app/" style="text-decoration: none;">
                         <div class="card-image1" style="background-image: url(Thumbnails/Tasknet.png)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
