--- a/index.html
+++ b/index.html
@@ -345,7 +345,10 @@
             <div class="blog">
                 <div class="projects-container fade-in-up">
                     <div style="padding-left: 7px;" class="projects-contents">
-                        <p class="fade-in-up">TECHNICAL ARTICLES</p>
+                        <div class="fade-in-up technical-articles">
+                            <div class="fade-in-up tech">TECHNICAL</div>
+                            <div class="fade-in-up tech2">ARTICLES</div>
+                        </div>
                         <!-- From Uiverse.io by vinodjangid07 --> 
                     <a class="js-readall" style="text-decoration: none;"><button class="button fade-in-up">
                         Read All
