--- a/projects.html
+++ b/projects.html
@@ -301,13 +301,11 @@
         <div class="carousel-container1">
             <section style="margin-top: 80px; margin-bottom: 10px;" class="projects-banner">
                 <div class="banner-overlay">
-                  <h1>Welcome to my Portfolio</h1>
+                  <h1>Selected Projects</h1>
                     <p>
-                      This portfolio showcases a curated selection of projects that reflect my deep understanding of modern web development from intuitive frontends built with React to powerful, scalable backends powered by Node.js, Express, and MongoDB. With every line of code, I strive for clarity, efficiency, and excellence.
+                      This portfolio of selected projects showcases a curated selection of projects that reflect my deep understanding of modern web development from intuitive frontends built with React to powerful, scalable backends powered by Node.js, Express, and MongoDB. With every line of code, I strive for clarity, efficiency, and excellence.
                   
                       I believe in constant growth, and I’m always exploring new technologies, design principles, and best practices to push my boundaries and deliver cutting-edge, world-class digital products. 
-                    
-                      Take a look around, explore my work, and let’s create something incredible together.
                     </p>
                 </div>
               </section>
@@ -324,22 +322,22 @@
                                 <span class="tag1">NODE/EXPRESS</span>
                             </div>
                             <h3 class="card-title1">A responsive web app for tracking expenses with charts and a clean dashboard UI</h3>
-                            <p class="card-date1">Expenses Tracker</p>
+                            <p class="card-date1">EXPENSES TRACKER</p>
                         </div>
                     </a>
                  </div>
 
                   <div class="card1 fade-in-up">
                     <a href="https://jumia-clone-sl3f.vercel.app/" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/Tasknet.png)"></div>
+                        <div class="card-image1" style="background-image: url(Thumbnails/58EC0FDB-8F9F-486E-A555-FFAD982FA41D.PNG)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
-                                <span class="tag1">REACT</span>
-                                <span class="tag1">NODE/EXPRESS API</span>
-                                <span class="tag1">MONGODB</span>
+                                <span class="tag1">REACT UI</span>
+                                <span class="tag1">STRIPE PAYMENTS</span>
+                                <span class="tag1">NODE/EXPRESS</span>
                             </div>
-                            <h3 class="card-title1">Create, edit, and organize tasks with drag-and-drop UI</h3>
-                            <p class="card-date1">TASKNEST (TASK MANAGER)</p>
+                            <h3 class="card-title1">A modern online store with product pages, cart, and checkout</h3>
+                            <p class="card-date1">SHOPEASE (E-COMMERCE STORE)</p>
                         </div>
                     </a>
                  </div>
